# sdk

./: .gitignore  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: logenvelope.yml  publish.yml  python-logger.yml
python/authentication-middleware/: README.md  pyproject.toml
python/authentication-middleware/src/authentication_in_the_middle/: __init__.py  actors.py  decorators.py  dev_jwt.py  jwks.py  logging.py  session.py
python/authentication-middleware/tests/: test_decorators.py  test_jwks.py  test_platform_actors.py
python/authorization-middleware/: CHANGELOG.md  README.md  pyproject.toml
python/authorization-middleware/src/authorization_in_the_middle/: __init__.py  action_scope.py  audit_attribution.py  cedar_attrs.py  client.py  decorators.py  entities.py  evaluator.py  flask_identity.py  flask_request.py  logging_context.py  openapi_request.py  payload.py  policy_sources.py  rest_defaults.py  rest_entities.py  route_inference.py  security.py  service_conventions.py  write_planners.py
python/authorization-middleware/tests/: test_audit_attribution.py  test_cedar_attrs.py  test_decorators.py  test_entities.py  test_flask_identity.py  test_logging_context.py  test_openapi_request.py  test_payload.py  test_policy_sources.py  test_principal_entity.py  test_rest_defaults.py  test_rest_entities.py  test_security_rest.py  test_write_planners.py
python/logenvelope/: README.md  pyproject.toml
python/logenvelope/src/logenvelope/: __init__.py  events.py  flask.py  formatter.py  gunicorn.py  setup.py  state.py
python/logenvelope/tests/: test_flask.py  test_gunicorn.py  test_logger.py
python/logger/: README.md  pyproject.toml
python/logger/src/neosofia_logger/: __init__.py
python/logger/tests/: test_logger.py
python/platform-client/: pyproject.toml
python/platform-client/src/platform_client/: __init__.py  headers.py  service_registry.py  token_broker.py  upstream.py
python/platform-client/tests/: test_headers.py  test_service_registry.py  test_token_broker.py  test_upstream.py
