[project]
name = "neosofia-sdk"
version = "0.0.0"
description = "Neosofia platform SDK — polyglot collection of shared packages. This top-level project exists only to declare the uv workspace; nothing is published from this root."
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "logenvelope",
    "authentication-in-the-middle",
    "authorization-in-the-middle",
    "platform-client",
]

[tool.uv.workspace]
members = [
    "python/authentication-middleware",
    "python/authorization-middleware",
    "python/logenvelope",
    "python/platform-client",
]

[tool.uv]
package = false

[tool.uv.sources]
logenvelope = { workspace = true }
authentication-in-the-middle = { workspace = true }
authorization-in-the-middle = { workspace = true }
platform-client = { workspace = true }
