[project]
name = "authentication-in-the-middle"
version = "0.6.0"
description = "Authentication middleware for Neosofia platform services."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "Neosofia" }]
keywords = ["authentication", "middleware", "web-service"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]
dependencies = ["flask>=3.0.0", "pyjwt>=2.8.0", "cryptography>=42.0.0"]

[project.urls]
Homepage = "https://github.com/Neosofia/sdk"
Repository = "https://github.com/Neosofia/sdk"
Issues = "https://github.com/Neosofia/sdk/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/authentication_in_the_middle"]
force-exclude = ["**/dev_jwt.py"]

[dependency-groups]
dev = []
