[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/authorization_in_the_middle"]

[project]
name = "authorization-in-the-middle"
version = "0.4.0"
description = "Authorization middleware for Neosofia platform services."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "Neosofia" }]
keywords = ["authorization", "cedar", "middleware", "web-service"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]
dependencies = [
    "cedarpy>=4.8.0",
    "flask>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/Neosofia/sdk"
Repository = "https://github.com/Neosofia/sdk"
Issues = "https://github.com/Neosofia/sdk/issues"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=7.1.0",
]
