[project]
name = "logenvelope"
version = "0.3.0"
description = "Structured JSON logger for a web service platform. Conforms to the log envelope schema published at https://github.com/Neosofia/schemas."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "Neosofia" }]
keywords = ["logging", "json", "structured-logging", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Neosofia/sdk"
Repository = "https://github.com/Neosofia/sdk"
Issues = "https://github.com/Neosofia/sdk/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/logenvelope"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "jsonschema>=4.21",
]
