[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "platform-client"
version = "0.2.0"
description = "Platform HTTP client helpers: outbound headers, upstream error classification, JWT broker, service registry."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/platform_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--import-mode=importlib"

[dependency-groups]
dev = ["pytest>=8.0.0"]
